@@ -1,7 +1,9 @@
 package fin.starhud.screen;
 
 import com.mojang.blaze3d.platform.Window;
+import fin.starhud.Helper;
 import fin.starhud.Main;
+import fin.starhud.compat.ImmediatelyFastCompat;
 import fin.starhud.config.BaseHUDSettings;
 import fin.starhud.config.GeneralSettings;
 import fin.starhud.config.GroupedHUDSettings;
@@ -128,7 +130,7 @@ public class EditHUDScreen extends Screen {
                 Component.translatable("starhud.screen.button.display_na"),
                 button -> {
                     if (selectedHUDs.isEmpty()) return;
-                    AbstractHUD selectedHUD = selectedHUDs.getFirst();
+                    AbstractHUD selectedHUD = selectedHUDs.get(0);
                     HUDAction act = onHUDDisplayModeChanged(selectedHUD, selectedHUD.getSettings().getDisplayMode().next());
                     history.execute(act);
                     hudDisplayButton.setMessage(Component.translatable("starhud.screen.button.display", selectedHUD.getSettings().getDisplayMode().toString()));
@@ -142,7 +144,7 @@ public class EditHUDScreen extends Screen {
                 Component.translatable("starhud.screen.status.na"),
                 button -> {
                     if (selectedHUDs.isEmpty()) return;
-                    AbstractHUD selectedHUD = selectedHUDs.getFirst();
+                    AbstractHUD selectedHUD = selectedHUDs.get(0);
                     HUDAction act = onShouldRenderChanged(selectedHUD, !selectedHUD.getSettings().shouldRender());
                     history.execute(act);
                     button.setMessage(selectedHUD.getSettings().shouldRender ?
@@ -155,7 +157,7 @@ public class EditHUDScreen extends Screen {
                 Component.translatable("starhud.screen.button.shadow_na"),
                 button -> {
                     if (selectedHUDs.isEmpty()) return;
-                    AbstractHUD hud = selectedHUDs.getFirst();
+                    AbstractHUD hud = selectedHUDs.get(0);
                     HUDAction act = onDrawTextShadowChanged(hud, !hud.getSettings().drawTextShadow);
                     history.execute(act);
                     drawTextShadowButton.setMessage(Component.translatable("starhud.screen.button.shadow",
@@ -172,7 +174,7 @@ public class EditHUDScreen extends Screen {
                 Component.translatable("starhud.screen.button.background_na"),
                 button -> {
                     if (selectedHUDs.isEmpty()) return;
-                    AbstractHUD selectedHUD = selectedHUDs.getFirst();
+                    AbstractHUD selectedHUD = selectedHUDs.get(0);
                     HUDAction act = onDrawBackgroundChanged(selectedHUD, !selectedHUD.getSettings().drawBackground);
                     history.execute(act);
                     drawBackgroundButton.setMessage(Component.translatable("starhud.screen.button.background",
@@ -264,7 +266,7 @@ public class EditHUDScreen extends Screen {
                         HUDAction act = onGroupChanged(selectedHUDs);
                         history.commit(act);
                     } else if (canSelectedHUDUngroup) {
-                        HUDAction act = onUngroupChanged((GroupedHUD) selectedHUDs.getFirst());
+                        HUDAction act = onUngroupChanged((GroupedHUD) selectedHUDs.get(0));
                         history.commit(act);
                     }
 
@@ -290,7 +292,7 @@ public class EditHUDScreen extends Screen {
         gapField.setResponder(text -> {
             if (supressFieldEvents) return;
             if (selectedHUDs.isEmpty()) return;
-            if (!(selectedHUDs.getFirst() instanceof GroupedHUD hud)) return;
+            if (!(selectedHUDs.get(0) instanceof GroupedHUD hud)) return;
 
             try {
                 int newGap = Integer.parseInt(text);
@@ -302,7 +304,7 @@ public class EditHUDScreen extends Screen {
         xField.setResponder(text -> {
             if (supressFieldEvents) return;
             if (selectedHUDs.isEmpty()) return;
-            AbstractHUD hud = selectedHUDs.getFirst();
+            AbstractHUD hud = selectedHUDs.get(0);
             try {
                 int newX = Integer.parseInt(text);
                 HUDAction act = onXFieldChanged(hud, hud.getSettings().getX(), newX);
@@ -313,7 +315,7 @@ public class EditHUDScreen extends Screen {
         yField.setResponder(text -> {
             if (supressFieldEvents) return;
             if (selectedHUDs.isEmpty()) return;
-            AbstractHUD hud = selectedHUDs.getFirst();
+            AbstractHUD hud = selectedHUDs.get(0);
             try {
                 int newY = Integer.parseInt(text);
                 HUDAction act = onYFieldChanged(hud, hud.getSettings().getY(), newY);
@@ -325,7 +327,7 @@ public class EditHUDScreen extends Screen {
         scaleField.setResponder(text -> {
             if (supressFieldEvents) return;
             if (selectedHUDs.isEmpty()) return;
-            AbstractHUD hud = selectedHUDs.getFirst();
+            AbstractHUD hud = selectedHUDs.get(0);
             try {
                 float newScale = Float.parseFloat(text);
                 HUDAction act = onScaleFieldChanged(hud, hud.getSettings().getScale(), newScale);
@@ -338,7 +340,7 @@ public class EditHUDScreen extends Screen {
                 Component.translatable("starhud.screen.status.na"),
                 button -> {
                     if (selectedHUDs.isEmpty()) return;
-                    if (!(selectedHUDs.getFirst() instanceof GroupedHUD hud)) return;
+                    if (!(selectedHUDs.get(0) instanceof GroupedHUD hud)) return;
 
                     HUDAction act = onChildAlignmentChanged(hud, hud.groupSettings.getChildAlignment().next());
                     history.execute(act);
@@ -355,7 +357,7 @@ public class EditHUDScreen extends Screen {
                 Component.translatable("starhud.screen.status.na"),
                 button -> {
                     if (selectedHUDs.isEmpty()) return;
-                    if (!(selectedHUDs.getFirst() instanceof GroupedHUD hud)) return;
+                    if (!(selectedHUDs.get(0) instanceof GroupedHUD hud)) return;
                     
                     HUDAction act = onChildOrderingChanged(hud, hud.groupSettings.getChildOrdering().next());
                     history.execute(act);
@@ -372,7 +374,7 @@ public class EditHUDScreen extends Screen {
                 Component.translatable("starhud.screen.status.na"),
                 button -> {
                     if (selectedHUDs.isEmpty()) return;
-                    if (!(selectedHUDs.getFirst() instanceof GroupedHUD hud)) return;
+                    if (!(selectedHUDs.get(0) instanceof GroupedHUD hud)) return;
 
                     HUDAction act = onGroupAlignmentChanged(hud, !hud.groupSettings.alignVertical);
                     history.execute(act);
@@ -426,10 +428,20 @@ public class EditHUDScreen extends Screen {
 
     @Override
     public void render(GuiGraphics context, int mouseX, int mouseY, float delta) {
+        if (SETTINGS.shouldBatchHUDWithImmediatelyFast && Helper.isModLoaded("immediatelyfast")) {
+            ImmediatelyFastCompat.beginHudBatching();
+            renderScreen(context, mouseX, mouseY, delta);
+            ImmediatelyFastCompat.endHudBatching();
+        } else {
+            renderScreen(context, mouseX, mouseY, delta);
+        }
+    }
+
+    public void renderScreen(GuiGraphics context, int mouseX, int mouseY, float delta) {
 
         if (SETTINGS.drawDarkBackground) {
             final float alpha = (float) SETTINGS.getDarkOpacity() / 100;
-            final int color = FastColor.as8BitChannel(alpha) << 24;
+            final int color = Helper.channelFromFloat(alpha) << 24;
             context.fill(0, 0, this.width, this.height, color);
         }
 
@@ -449,7 +461,7 @@ public class EditHUDScreen extends Screen {
         if (helpWidget.isActive()) {
             final int CENTER_X = this.width / 2;
             final int CENTER_Y = this.height / 2 + (PADDING / 2);
-            AbstractHUD hud = selectedHUDs.isEmpty() ? null : selectedHUDs.getFirst();
+            AbstractHUD hud = selectedHUDs.isEmpty() ? null : selectedHUDs.get(0);
             helpWidget.render(context, hud, CENTER_X, CENTER_Y + GAP);
         }
 
@@ -630,7 +642,7 @@ public class EditHUDScreen extends Screen {
     private AbstractHUD getHUDAtPosition(double mouseX, double mouseY) {
 
         if (!selectedHUDs.isEmpty()) {
-            AbstractHUD hud = selectedHUDs.getFirst();
+            AbstractHUD hud = selectedHUDs.get(0);
             if (hud.isHovered(mouseX, mouseY)) {
                 sameHUDClicked = true;
                 return hud;
@@ -816,7 +828,7 @@ public class EditHUDScreen extends Screen {
             dragCurrentX = mouseX;
             dragCurrentY = mouseY;
 
-            if (dragging && !selectedHUDs.isEmpty() && !selectedHUDs.getFirst().isInGroup()) { // if we've moved and there are selected huds, we drag them, obviously
+            if (dragging && !selectedHUDs.isEmpty() && !selectedHUDs.get(0).isInGroup()) { // if we've moved and there are selected huds, we drag them, obviously
                 dragSelectedHUDs(mouseX, mouseY, deltaX, deltaY);
                 return true;
             } else if (dragSelection) { // otherwise it's just drag box
@@ -867,7 +879,7 @@ public class EditHUDScreen extends Screen {
 
         // Update final positions in text fields
         if (!selectedHUDs.isEmpty()) {
-            AbstractHUD selectedHUD = selectedHUDs.getFirst();
+            AbstractHUD selectedHUD = selectedHUDs.get(0);
             supressFieldEvents = true;
             xField.setValue(String.valueOf(selectedHUD.getSettings().x));
             yField.setValue(String.valueOf(selectedHUD.getSettings().y));
@@ -1068,7 +1080,7 @@ public class EditHUDScreen extends Screen {
         AbstractHUD oldFirst = null;
         int oldSize = 0;
         if (!selectedHUDs.isEmpty()) {
-            oldFirst = selectedHUDs.getFirst();
+            oldFirst = selectedHUDs.get(0);
             oldSize = selectedHUDs.size();
         }
 
@@ -1111,7 +1123,7 @@ public class EditHUDScreen extends Screen {
             if (oldSize != newSize)
                 updateGroupFieldFromSelectedHUD();
 
-            if (selectedHUDs.isEmpty() || oldFirst != selectedHUDs.getFirst()) {
+            if (selectedHUDs.isEmpty() || oldFirst != selectedHUDs.get(0)) {
                 updateFieldsFromSelectedHUD();
             }
         }
@@ -1145,7 +1157,7 @@ public class EditHUDScreen extends Screen {
             }
 
             if (!acts.isEmpty()) {
-                history.execute(acts.size() == 1 ? acts.getFirst() : new CompositeAction(acts));
+                history.execute(acts.size() == 1 ? acts.get(0) : new CompositeAction(acts));
                 updateFieldsFromSelectedHUD();
                 updateSelectedHUDBox();
                 return true;
@@ -1163,7 +1175,7 @@ public class EditHUDScreen extends Screen {
                         }
                     } else {
                         if (canSelectedHUDUngroup) {
-                            HUDAction act = onUngroupChanged((GroupedHUD) selectedHUDs.getFirst());
+                            HUDAction act = onUngroupChanged((GroupedHUD) selectedHUDs.get(0));
                             history.commit(act);
                             selectedHUDs.clear();
                             handled = true;
@@ -1441,7 +1453,7 @@ public class EditHUDScreen extends Screen {
             groupUngroupButton.active = false;
             groupUngroupButton.visible = false;
         } else {
-            AbstractHUD firstHUD = selectedHUDs.getFirst();
+            AbstractHUD firstHUD = selectedHUDs.get(0);
 
             canSelectedHUDUngroup =  (selectedHUDs.size() == 1 && firstHUD instanceof GroupedHUD && !firstHUD.isInGroup());
             canSelectedHUDsGroup = (selectedHUDs.size() > 1 && selectedHUDs.stream().noneMatch(AbstractHUD::isInGroup));
@@ -1499,7 +1511,7 @@ public class EditHUDScreen extends Screen {
                 tfw.setEditable(false);
             }
         } else {
-            AbstractHUD firstHUD = selectedHUDs.getFirst();
+            AbstractHUD firstHUD = selectedHUDs.get(0);
             BaseHUDSettings settings = firstHUD.getSettings();
             xField.setValue(String.valueOf(settings.x));
             yField.setValue(String.valueOf(settings.y));
@@ -1569,7 +1581,7 @@ public class EditHUDScreen extends Screen {
             tfw.visible = true;
         }
 
-        if (!selectedHUDs.isEmpty() && selectedHUDs.getFirst() instanceof GroupedHUD hud) {
+        if (!selectedHUDs.isEmpty() && selectedHUDs.get(0) instanceof GroupedHUD hud) {
             gapField.visible = true;
             groupAlignmentButton.visible = true;
             childAlignmentButton.visible = true;
